# stac-repository

./: .gitignore  .gitlab-ci.yml  README.md  __init__.py  justfile  make_docs.py  pyproject.toml
demo/: __init__.py  generate_products.py  ingest_products.py
demo/cli/: __init__.py  generate_config.py  help.py  history.py  ingest_products.py
docs/: file-backend.md  motivation.md
stac_processor_demo/: __init__.py  generate_geometry.py  generate_image.py  generate_metadata.py  metadata.csv  processor.py
stac_repository/: __about__.py  __init__.py  backend.py  base_stac_commit.py  base_stac_repository.py  base_stac_transaction.py  none_processor.py  processors.py  stac.py  stac_catalog.py  stac_commit.py  stac_index.py  stac_processor.py  stac_repository.py  stac_transaction.py
stac_repository/file/: __init__.py  file_stac_commit.py  file_stac_repository.py  file_stac_transaction.py
stac_repository/git/: __init__.py  git.py  git_stac_commit.py  git_stac_index.py  git_stac_repository.py  git_stac_transaction.py  stac_repository.py  stac_transaction.py
stac_repository/lib/: git.py  git_stac_io.py  href_is_path.py  job_report.py
stac_repository/lib/stac/: __init__.py  get_stac_object.py  get_stac_object_ancestors.py  get_stac_object_descendants.py  get_stac_object_hrefs.py  get_stac_object_line.py  id.py  version.py  walk_stac_object.py
stac_repository/managed/: __init__.py  processor.py  processors.py  stac_commit.py  stac_commit_managed_mixin.py  stac_extension.py  stac_index.py  stac_repository.py  stac_repository_managed_mixin.py  stac_transaction.py  stac_transaction_ingest.py  stac_transaction_prune.py
stac_repository/managed/mock/: stac_commit.py  stac_repository.py
stac_repository/mock/: stac_commit.py  stac_repository.py  stac_transaction.py
stac_repository/stac/: __init__.py  models.py  stac_io.py  utils.py
stac_repository_cli/: __init__.py  app.py  backends.py  config.py  print.py
tests/: conftest.py  test_about.py  test_commit.py  test_commit_catalog.py  test_demo.py  test_git.py  test_git_stac_io.py  test_managed_commit.py  test_transaction.py
