[project]
dynamic = ["version"]

name = "stac-repository"
description = "A (git-)versionned STAC catalog and catalog management system"
keywords = ["pystac", "stac", "database", "git", "repository"]
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
]

authors = [{ name = "Pierre Fontbonne", email = "pierre.fontbonne@uca.fr" }]
maintainers = [
    { name = "Pierre Fontbonne", email = "pierre.fontbonne@uca.fr" },
    { name = "Yannick Guéhenneux", email = "yannick.guehenneux@uca.fr" },
]

license = "etalab-2.0"
license-files = ["LICENCE.txt"]

requires-python = ">=3.12"

dependencies = [
    "pystac ~= 1.11.0",
    "pydantic ~= 2.10.3",
    "stac_pydantic ~= 3.2.0",
    "orjson ~= 3.10",
    "xxhash~=3.5.0",
]

[dependency-groups]

dev = [
    "pytest ~= 8.3.0",
    "shapely ~= 2.0.0",
    "numpy ~= 2.2.0",
    "matplotlib ~= 3.10.0",
    "pyproj ~= 3.7.0",
    "pillow ~= 11.1.0",
]

cli = ["pydantic ~= 2.10.3", "typer ~= 0.15.1"]

[project.scripts]
stac-repository = "stac_repository_cli.app:app"

[project.urls]
Homepage = "https://github.com/fntb/stac-repository"
Documentation = "https://github.com/fntb/stac-repository"
Repository = "https://github.com/fntb/stac-repository"
Issues = "https://github.com/fntb/stac-repository"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stac_repository", "stac_repository_cli"]

[tool.setuptools.dynamic]
version = { attr = "stac_repository.__about__.__version__" }
